--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
+upload_port = COM3
+upload_speed = 115200
+monitor_port = COM3
+monitor_speed = 115200
